----------------------
* Added info for the ejbjar and ear tasks. Patch by Joris Kuipers

EmailPublisher
----------------------
* Send build notification emails to all valid recipients and not to fail build even if some of the email addresses were rejected by SMTP rely. Patch Igor Fredorenko

FileServlet
----------------------
* write(stream) now uses buffered IO. Patch by Garrick Olson

HTMLEmailBuilder
----------------------
* Delete temp files after they've been used. Patch by Joris Kuipers

HttpFile
----------------------
* New sourcecontrol that reports changes if a web page has been changed. Patch by Brad Clarke

index.jsp
----------------------
* Sort projects. Patch by Brad Clarke

JDOM support
----------------------
* Upgraded from version b7 to version b9

jmx
----------------------
* Now using MX4J instead of Sun's reference implementation. Patch by Michael Kloss
* Added RMI adapter. Patch by Michael Beauregard

Main
----------------------
* Display command-line options if "-?" is passed as an argument.

main.jsp
----------------------
* Added a metrics tab.

MergeLogger
----------------------
* Use XMLFilter to remove properties from JUnit results. This fixes removal for JUnit reports and uses less resources.

metrics.jsp
----------------------
* New Metrics tab. This uses the new <buildinfo> tag, and renders charts using
  the cewolf tag libraries.

ModificationSet
----------------------
* Fixed bogus "A modification was detected in the future" message
* Now properly checks time of modficiations that are added as elements

NavigationTag
----------------------
* Dates for navigation links now formatted according to the locale of the user's browser.a

P4
----------------------
* Close Process-streams in collectChangelistSinceLastBuild to avoid "too many open files"-errors

PluginRegistry
----------------------
* getDefaultPluginRegistry() now reads default plugins from a properties-file.